# Ogun

./: .gitignore  HANDOFF.md  Makefile  README.md  VERSION  ogun
.github/workflows/: build.yml
android_app/: README.md  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/rover/app/: MainActivity.kt  RoverProtocol.kt  RoverViewModel.kt
android_app/app/src/main/java/com/rover/app/ble/: BleManager.kt
android_app/app/src/main/java/com/rover/app/network/: WebSocketManager.kt
android_app/app/src/main/java/com/rover/app/ui/: CameraFragment.kt  ConnectionFragment.kt  ControllerFragment.kt  JoystickView.kt  OtaFragment.kt
android_app/app/src/main/res/layout/: activity_main.xml  fragment_cameras.xml  fragment_connection.xml  fragment_controller.xml  fragment_ota.xml
android_app/app/src/main/res/navigation/: nav_graph.xml
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/gradle/: libs.versions.toml
android_app/ogun-webview/: build.gradle.kts  consumer-rules.pro
android_app/ogun-webview/src/main/java/com/surreallabs/ogun/webview/: OgunControlView.kt  OgunDiscovery.kt
nrf52_firmware/: install_variant.py  platformio.ini
nrf52_firmware/boards/: xiaoblesense.json
nrf52_firmware/src/: BleUart.hpp  FirmwareConfig.hpp  MotorController.hpp  SensorHub.hpp  main.cpp
nrf52_firmware/variants/xiaoblesense/: variant.cpp  variant.h
pi_server/: CMakeLists.txt
pi_server/modules/: mod_lights.conf.example
pi_server/scripts/: build-and-deploy.sh  commands.md  cross-build.sh  deploy-prebuilt.sh  install.sh  rover.conf.example  rover.service
pi_server/src/: Config.cpp  Config.hpp  Protocol.hpp  main.cpp
pi_server/src/ble/: BleServer.cpp  BleServer.hpp
pi_server/src/camera/: CameraStream.cpp  CameraStream.hpp
pi_server/src/gpio/: GpioController.cpp  GpioController.hpp
pi_server/src/module/: ModuleConf.cpp  ModuleConf.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  RoverModule.hpp
pi_server/src/modules/mod_lights/: ModLights.cpp  ModLights.hpp  mod_lights_loader.cpp
pi_server/src/ota/: TeensyOta.cpp  TeensyOta.hpp
pi_server/src/serial/: TeensyBridge.cpp  TeensyBridge.hpp
pi_server/src/webui/: WebUiServer.cpp  WebUiServer.hpp
pi_server/src/wifi/: WifiServer.cpp  WifiServer.hpp
pi_server/webui/: index.html
scripts/: apply-update.sh  gen-version.sh  rover-auto-update.env.example  rover-auto-update.service  rover-auto-update.sh  rover-auto-update.timer  verify.sh
teensy_firmware/: FIRMWARE_PLAN.md  platformio.ini
teensy_firmware/src/: FirmwareConfig.hpp  MotorController.hpp  SensorHub.hpp  main.cpp
